# billiard-video-analysis

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assignment/: README.md
assignment/dataset/: README.md
assignment/dataset/game1_clip1/bounding_boxes/: frame_first_bbox.txt  frame_last_bbox.txt
assignment/dataset/game1_clip2/bounding_boxes/: frame_last_bbox.txt
assignment/dataset/game1_clip3/bounding_boxes/: frame_first_bbox.txt  frame_last_bbox.txt
assignment/dataset/game1_clip4/bounding_boxes/: frame_first_bbox.txt
assignment/dataset/game2_clip1/bounding_boxes/: frame_first_bbox.txt  frame_last_bbox.txt
assignment/dataset/game2_clip2/bounding_boxes/: frame_first_bbox.txt  frame_last_bbox.txt
assignment/dataset/game3_clip2/bounding_boxes/: frame_first_bbox.txt
assignment/dataset/game4_clip1/bounding_boxes/: frame_first_bbox.txt  frame_last_bbox.txt
assignment/dataset/game4_clip2/bounding_boxes/: frame_last_bbox.txt
dataset/game1_clip2/bounding_boxes/: frame_first_bbox.txt
dataset/game1_clip4/bounding_boxes/: frame_last_bbox.txt
dataset/game3_clip1/bounding_boxes/: frame_first_bbox.txt  frame_last_bbox.txt
dataset/game3_clip2/bounding_boxes/: frame_last_bbox.txt
dataset/game4_clip2/bounding_boxes/: frame_first_bbox.txt
metrics/: .gitignore
metrics/data/: predicted_frame_first_bbox.txt
metrics/include/: billiard_metric.h
metrics/src/: billiard_metric.cpp  main.cpp
system/: CMakeLists.txt
system/include/: billiard_metric.h  border_detection.h  edge_detection.h  filesystem_utils.h  library.h  lourdes.h  minimap.h  object_detection.h  segmentation.h  tracking.h  video_utils.h
system/result/game1_clip1/bounding_boxes/: frame_first_bbox.txt  frame_last_bbox.txt
system/result/game1_clip1/metrics/: frame_first.txt  frame_last.txt
system/result/game1_clip2/bounding_boxes/: frame_first_bbox.txt  frame_last_bbox.txt
system/result/game1_clip2/metrics/: frame_first.txt  frame_last.txt
system/result/game1_clip3/bounding_boxes/: frame_first_bbox.txt  frame_last_bbox.txt
system/result/game1_clip3/metrics/: frame_first.txt  frame_last.txt
system/result/game1_clip4/bounding_boxes/: frame_first_bbox.txt  frame_last_bbox.txt
system/result/game1_clip4/metrics/: frame_first.txt  frame_last.txt
system/result/game2_clip1/bounding_boxes/: frame_first_bbox.txt  frame_last_bbox.txt
system/result/game2_clip1/metrics/: frame_first.txt  frame_last.txt
system/result/game2_clip2/bounding_boxes/: frame_first_bbox.txt  frame_last_bbox.txt
system/result/game2_clip2/metrics/: frame_first.txt  frame_last.txt
system/result/game3_clip1/bounding_boxes/: frame_first_bbox.txt  frame_last_bbox.txt
system/result/game3_clip1/metrics/: frame_first.txt  frame_last.txt
system/result/game3_clip2/bounding_boxes/: frame_first_bbox.txt  frame_last_bbox.txt
system/result/game3_clip2/metrics/: frame_first.txt  frame_last.txt
system/result/game4_clip1/bounding_boxes/: frame_first_bbox.txt  frame_last_bbox.txt
system/result/game4_clip1/metrics/: frame_first.txt  frame_last.txt
system/result/game4_clip2/bounding_boxes/: frame_first_bbox.txt  frame_last_bbox.txt
system/result/game4_clip2/metrics/: frame_first.txt  frame_last.txt
system/src/: billiard_metric.cpp  border_detection.cpp  edge_detection.cpp  fabrizio.cpp  federico.cpp  filesystem_utils.cpp  leonardo.cpp  library.cpp  lourdes.cpp  main.cpp  main_lourdes.cpp  minimap.cpp  object_detection.cpp  segmentation.cpp  task.cpp  tracking.cpp  video_utils.cpp
